fix image alignment

--- a/Aurorae/Views/Gallery/File.cshtml.css
+++ b/Aurorae/Views/Gallery/File.cshtml.css
@@ -1,8 +1,6 @@
 #image {
     min-width: 50vw;
-    min-height: 50vh;
     max-width: 100%;
-    max-height: 100%;
     object-fit: contain;
     border-radius: var(--bs-border-radius);
 }
